# DumbRustChat

./: Cargo.toml  README.md
llm_inference_service/: Cargo.toml
llm_inference_service/src/: lib.rs  main.rs
src/: main.rs
