[package]
name = "DumbRustChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
log = "0.4.21"
getrandom = { version = "0.2", features = ["js"] }
llm_inference_service = { path = "./llm_inference_service" }


[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
